test/langtools/tools/javac/patterns/UnreachableStatementInMatchClause.out
UnreachableStatementInMatchClause.java:13:17: compiler.err.unreachable.stmt
UnreachableStatementInMatchClause.java:17:17: compiler.err.unreachable.stmt
2 errors
